<resources>
    <string name="app_name">News Selector</string>

    <string name="news_selector_activity_alert_dialog_select_country">Top Headlines\nSelect a Country</string>
    <string name="news_selector_activity_alert_dialog_select_category">Top Headlines\nSelect Category</string>
    <string name="news_selector_activity_alert_dialog_select_category_positive_action_button">OK</string>
    <string name="news_selector_activity_alert_dialog_select_category_negative_action_button">Cancel</string>
    <string name="no_internet_connection_text_view_text">No network connection\nRestore connection and restart</string>
    <string name="navigation_drawer_top_headline_text">Top Headline</string>
    <string name="navigation_drawer_top_headline_country_select_text">Country select</string>
    <string name="navigation_drawer_top_headline_category_select_text">Category select</string>
    <string name="navigation_drawer_search_text">Search</string>
    <string name="navigation_drawer_save_to_read_text">Save to read</string>
    <string name="article_save_image_button_content_description">Save or delete article from save to latter read list.</string>
    <string name="article_card_view_article_image_content_description">Image of the article.</string>
    <string name="save_to_read_title">Saved for reed</string>
    <string name="search_article_title">Search Article</string>
    <string name="top_headlines_title">Top Headlines -\u0020</string>
    <string name="widget_refresh_button_description">Refresh widget news</string>
    <string name="search_title_search_base_text">Search article</string>

    <string-array name="categories_text">
        <item>Business</item>
        <item>Entertainment</item>
        <item>General</item>
        <item>Health</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Technology</item>
    </string-array>

    <!-- Final Values Don't Change -->
    <string name="shared_pref_name">com.robertkiszelirk.newsselector</string>
    <string name="shared_pref_country">country</string>
    <string name="shared_pref_country_id">countryId</string>
    <string name="shared_pref_business">business</string>
    <string name="shared_pref_entertainment">entertainment</string>
    <string name="shared_pref_general">general</string>
    <string name="shared_pref_health">health</string>
    <string name="shared_pref_science">science</string>
    <string name="shared_pref_sports">sports</string>
    <string name="shared_pref_technology">technology</string>
    <string name="shared_pref_country_name_default">United States</string>
    <string name="shared_pref_country_id_default_value">us</string>
    <string name="widget_title_text_news">News</string>
    <string name="widget_title_default_title">General News</string>
    <string name="no_data_text">No data available</string>
    <string name="widget_article_list_image_content_description">Image of the article</string>

    <!-- Final Values Don't Change -->
    <string-array name="countries">
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Cuba</item>
        <item>Czech Republic</item>
        <item>Egypt</item>
        <item>France</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Latvia</item>
        <item>Lithuania</item>
        <item>Malaysia</item>
        <item>Mexico</item>
        <item>Morocco</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Saud Arabia</item>
        <item>Serbia</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Taiwan</item>
        <item>Thailand</item>
        <item>Turkey</item>
        <item>UAE</item>
        <item>Ukraine</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Venezuela</item>
    </string-array>

    <!-- Final Values Don't Change -->
    <string-array name="countries_id">
        <item>ar</item>
        <item>au</item>
        <item>at</item>
        <item>be</item>
        <item>br</item>
        <item>bg</item>
        <item>ca</item>
        <item>cn</item>
        <item>co</item>
        <item>cu</item>
        <item>cz</item>
        <item>eg</item>
        <item>fr</item>
        <item>de</item>
        <item>gr</item>
        <item>hk</item>
        <item>hu</item>
        <item>in</item>
        <item>id</item>
        <item>ie</item>
        <item>il</item>
        <item>it</item>
        <item>jp</item>
        <item>lv</item>
        <item>lt</item>
        <item>my</item>
        <item>mx</item>
        <item>ma</item>
        <item>nl</item>
        <item>nz</item>
        <item>ng</item>
        <item>no</item>
        <item>ph</item>
        <item>pl</item>
        <item>pt</item>
        <item>ro</item>
        <item>ru</item>
        <item>sa</item>
        <item>rs</item>
        <item>sg</item>
        <item>sk</item>
        <item>si</item>
        <item>za</item>
        <item>kr</item>
        <item>se</item>
        <item>ch</item>
        <item>tw</item>
        <item>th</item>
        <item>tr</item>
        <item>ae</item>
        <item>ua</item>
        <item>gb</item>
        <item>us</item>
        <item>ve</item>
    </string-array>

    <!-- Final Values Don't Change -->
    <string-array name="categories">
        <item>business</item>
        <item>entertainment</item>
        <item>general</item>
        <item>health</item>
        <item>science</item>
        <item>sports</item>
        <item>technology</item>
    </string-array>
    <string-array name="languages">
        <item> العربية</item>
        <item>Deutsch</item>
        <item>English</item>
        <item>Español</item>
        <item>Français</item>
        <item>עברית</item>
        <item>Italiano</item>
        <item>Nederlands</item>
        <item>Norsk</item>
        <item>Português</item>
        <item>Pусский</item>
        <item>Davvisámegiella</item>
        <item>汉语 / 漢語</item>
    </string-array>

    <!-- Final Values Don't Change -->
    <string-array name="languages_id">
        <item>ar</item>
        <item>de</item>
        <item>en</item>
        <item>es</item>
        <item>fr</item>
        <item>he</item>
        <item>it</item>
        <item>nl</item>
        <item>no</item>
        <item>pt</item>
        <item>ru</item>
        <item>se</item>
        <item>zh</item>
    </string-array>
</resources>
